reservation routes doc
